fix assets problem and upload bug

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 
 /config/initializers/ominauth.rb
 /config/initializers/smtp.rb
-
+/public/assets/
 /file_upload/
 
 # Ignore all logfiles and tempfiles.
