--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
 
+# Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
 #/config/database.yml
@@ -23,3 +23,6 @@
 /log/
 /tmp
 /vendor/cache
+
+# except for the files
+!/config/locales/devise.zh_TW.yml
