--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/db/schema.rb
 #/config/database.yml
 #/config/dropbox.yml
 /config/initializers/secret_token.rb
