--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 *.yml
 /config/initializers/smtp.rb
 /public/
-/file_upload/
+/past_exams/
 /event_images/
 
 # Ignore all logfiles and tempfiles.
