add example yml config

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 /lib/tasks/
 
 /config/initializers/secret_token.rb
-*.yml
+/config/*.yml
 /config/initializers/smtp.rb
 /public/
 /past_exams/
@@ -31,7 +31,8 @@
 !/config/locales/zh-TW.yml
 
 # ignore database
-config/database.yml
+/config/database.yml
 
 # ignore .env
 .env
+
