--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -5,21 +5,23 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  database: nctuplus_development
+  host: localhost
+  username: root
+  password:
 
 development:
   <<: *default
-  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: nctuplus_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: nctuplus_production
